<?xml version="1.0" encoding="utf-8"?>

<!--Assignment #: HW05
File Name: Pflug_HW05 - fragment_create_account.xml
Full Name: Kristin Pflug-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountFragment">

    <EditText
        android:id="@+id/createAccount_nameTextBox"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/createAccount_nameTextBox_placeholder"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/createAccount_emailTextBox"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/emailTextBox_placeholder"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccount_nameTextBox" />

    <EditText
        android:id="@+id/createAccount_passwordTextBox"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/passwordTextBox_placeholder"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccount_emailTextBox" />

    <Button
        android:id="@+id/createAccount_submitButton"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:text="@string/submitButton_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccount_passwordTextBox" />

    <Button
        android:id="@+id/createAccount_cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/cancelButton_label"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccount_submitButton" />
</androidx.constraintlayout.widget.ConstraintLayout>