<?xml version="1.0" encoding="utf-8"?>

<!--Assignment #: HW05
File Name: Pflug_HW05 - fragment_login.xml
Full Name: Kristin Pflug-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <EditText
        android:id="@+id/login_emailTextBox"
        android:layout_width="274dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/emailTextBox_placeholder"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_passwordTextBox"
        android:layout_width="274dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/passwordTextBox_placeholder"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_emailTextBox" />

    <Button
        android:id="@+id/login_loginButton"
        android:layout_width="270dp"
        android:layout_height="42dp"
        android:layout_marginTop="28dp"
        android:text="@string/login_button_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_passwordTextBox" />

    <Button
        android:id="@+id/login_createAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:text="@string/login_createAccountButton_label"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.797"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_loginButton" />
</androidx.constraintlayout.widget.ConstraintLayout>