<?xml version="1.0" encoding="utf-8"?>

<!--Assignment #: HW05
File Name: Pflug_HW05 - fragment_create_post.xml
Full Name: Kristin Pflug-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePostFragment">

    <EditText
        android:id="@+id/createPost_enterPostText"
        android:layout_width="286dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/createPost_postText_placeholder"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createPost_SubmitButton"
        android:layout_width="274dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:text="@string/submitButton_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createPost_enterPostText" />

    <Button
        android:id="@+id/createPost_cancelPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/cancelButton_label"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createPost_SubmitButton" />
</androidx.constraintlayout.widget.ConstraintLayout>